04_workload/uncompliant_workload_examples/baseline-incompliant.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: alleaffengaffen
    app.kubernetes.io/name: alleaffengaffen
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
  name: alleaffengaffen
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: alleaffengaffen
  name: alleaffengaffen
  namespace: alleaffengaffen
spec:
  internalTrafficPolicy: Cluster
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: alleaffengaffen
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alleaffengaffen
  name: alleaffengaffen
  namespace: alleaffengaffen
spec:
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: alleaffengaffen
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alleaffengaffen
    spec:
      containers:
        - image: ghcr.io/alleaffengaffen/alleaffengaffen:main
          imagePullPolicy: Always
          name: alleaffengaffen
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 10Mi
          securityContext:
            privileged: true
